other-vpol/block-pod-exec-by-pod-name/.chainsaw-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bpe-podname-ns
