other-vpol/block-pod-exec-by-pod-name/.chainsaw-test/pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-maintenance-01
  namespace: bpe-podname-ns
spec:
  containers:
  - command:
    - sleep
    - "300"
    image: busybox:1.35
    name: busybox
  - command:
    - sleep
    - "300"
    image: busybox:1.35
    name: busybox02
