other-vpol/block-pod-exec-by-pod-name/.chainsaw-test/policy-exceptions-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-exceptions
