other-vpol/block-pod-exec-by-pod-name/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-exec-by-pod-name
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - reason: Failed
      status: "False"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
